修复随访和辅助检查关联bug，基本稳定，再测试一下

--- a/widget/html/followup/followup.html
+++ b/widget/html/followup/followup.html
@@ -41,7 +41,7 @@
             </div>
             <div class="groupName">检查</div>
             <div class="group">
-                <div class="field" onclick="openWin('physical');">
+                <div class="field">
                     <div class="key">体检信息</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
